CSS Fix: prevents unsightly wrapping of "Find Patients" bar in Query Tool

--- a/js-i2b2/cells/CRC/assets/QueryGroups.css
+++ b/js-i2b2/cells/CRC/assets/QueryGroups.css
@@ -191,6 +191,10 @@
 
 .QueryGroup .topbar {
     width: 100%;
+    display: flex;
+    white-space: nowrap;
+    overflow: hidden;
+
 }
 
 .QueryGroup .topbar .JoinText {
@@ -212,8 +216,7 @@
 .QueryGroup .topbar .without,
 .QueryGroup .topbar .when,
 .QueryGroup .topbar .qgclose {
-    display: inline-flex;
-    float:left;
+    display: inline-block;
     padding: 0.5em;
     height: 2.3em;
 }
@@ -292,7 +295,7 @@
 .QueryGroup.when .DateRange1Body,
 .QueryGroup.when .DateRange2Body,
 .QueryGroup.when .SequenceBar {
-    display: block;
+    display: flex;
 }
 
 .QueryGroup.when .DateRange1Lbl,
@@ -326,6 +329,7 @@
     transition: max-height 0.75s cubic-bezier(0.075, 0.82, 0.165, 1), background-color 0.3s ease;
     max-height: 0;
     overflow: hidden;
+    white-space: nowrap;
 }
 
 .QueryGroup .EventLbl,
